--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
       <div class="card-white" id="introduction">
         <h1 class="title">Pierre Bollack</h1>
 
-        <img src="/images/grimace.JPG" alt="On est là!" class="avatar">
-        <img src="/images/chameau.jpeg" alt="chameau" class="avatar">
+        <img src="./images/grimace.JPG" alt="On est là!" class="avatar">
+        <img src="./images/chameau.jpeg" alt="chameau" class="avatar">
 
         <h2>En formation au Wagon !</h2>
 
